Modified for new checkin system that has all the data in a csv file.

--- a/CreateMemberList/testData/TestCreateMemberList_small/output/members.html
+++ b/CreateMemberList/testData/TestCreateMemberList_small/output/members.html
@@ -37,69 +37,69 @@ tr:nth-child(even) {
   </thead>
  
     <tr>
-    <td><a href="javascript:sendLogRequest('Jack Winchester', '2021 Associate Members');">Jack Winchester</a><br><a href="javascript:sendLogRequest('Mickael Kirtland', '2021 Associate Members');">Mickael Kirtland</a><br><a href="./guestPassForm.html?address=2021 Associate Members" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('Amy Raczkowski', '0 Aqua');">Amy Raczkowski</a><br><a href="javascript:sendLogRequest('Darlene Vossbri', '0 Aqua');">Darlene Vossbri</a><br><a href="./guestPassForm.html?address=0 Aqua" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>2021&nbspAssociate Members</td>
+    <td>0&nbsp;Aqua</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('Marina OByrne', '278 Dondero');">Marina OByrne</a><img src="12.jpg" alt="Marina OByrne" width="200" height="200" /><br><a href="./guestPassForm.html?address=278 Dondero" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('RENTER Katie Jacopi', '6346 Camino Verde Drive');">RENTER Katie Jacopi</a><img src="IMG_6013.HEIC.jpg" alt="RENTER Katie Jacopi" width="200" height="200" /><br><a href="javascript:sendLogRequest('RENTER Troy Jackson', '6346 Camino Verde Drive');">RENTER Troy Jackson</a><br><a href="./guestPassForm.html?address=6346 Camino Verde Drive" target="_blank">Guest</a><br></td>
+    <td style="color: red;">The best daughter, without a doubt</td>
+    <td>6346&nbsp;Camino Verde Drive</td>
+  </tr>
+  <tr>
+    <td><a href="javascript:sendLogRequest('HO Amzi Slutzky', '182 Castillon Way');">HO Amzi Slutzky</a><br><a href="./guestPassForm.html?address=182 Castillon Way" target="_blank">Guest</a><br></td>
+    <td style="color: red;">Outstanding Dues $142</td>
+    <td>182&nbsp;Castillon Way</td>
+  </tr>
+  <tr>
+    <td><a href="javascript:sendLogRequest('HO Gilbert Patrick', '184 Castillon Way');">HO Gilbert Patrick</a><br><a href="./guestPassForm.html?address=184 Castillon Way" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>278&nbspDondero</td>
+    <td>184&nbsp;Castillon Way</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('H Dirk Seidel', '295 Dondero');">H Dirk Seidel</a><img src="4.jpg" alt="H Dirk Seidel" width="200" height="200" /><br><a href="./guestPassForm.html?address=295 Dondero" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('HO Larry Jorstad', '185 Castillon Way');">HO Larry Jorstad</a><br><a href="./guestPassForm.html?address=185 Castillon Way" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>295&nbspDondero</td>
+    <td>185&nbsp;Castillon Way</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('Angela Adair', '265 El Portal');">Angela Adair</a><img src="7.jpg" alt="Angela Adair" width="200" height="200" /><br><a href="./guestPassForm.html?address=265 El Portal" target="_blank">Guest</a><br></td>
-    <td style="color: red;">Late on dues</td>
-    <td>265&nbspEl Portal</td>
-  </tr>
-  <tr>
-    <td><a href="javascript:sendLogRequest('Xudong Huang', '322 El Portal');">Xudong Huang</a><img src="9.jpg" alt="Xudong Huang" width="200" height="200" /><br><a href="./guestPassForm.html?address=322 El Portal" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('HO Huong Nguyen', '204 Castillon Way');">HO Huong Nguyen</a><br><a href="./guestPassForm.html?address=204 Castillon Way" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>322&nbspEl Portal</td>
+    <td>204&nbsp;Castillon Way</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('Olga Test', '0 El Portal Way');">Olga Test</a><br><a href="./guestPassForm.html?address=0 El Portal Way" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('AM Amy Ward', '192 Coffeeberry Drive');">AM Amy Ward</a><br><a href="javascript:sendLogRequest('AM Jonathon Ward', '192 Coffeeberry Drive');">AM Jonathon Ward</a><br><a href="./guestPassForm.html?address=192 Coffeeberry Drive" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>0&nbspEl Portal Way</td>
+    <td>192&nbsp;Coffeeberry Drive</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('KeyCode', '0 KeyCode');">KeyCode</a><br><a href="./guestPassForm.html?address=0 KeyCode" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('AM Amy Raczkowski', '7232 Golf Course Lane');">AM Amy Raczkowski</a><img src="amy.jpg.jpg" alt="AM Amy Raczkowski" width="200" height="200" /><br><a href="javascript:sendLogRequest('AM Andrew Raczkowski', '7232 Golf Course Lane');">AM Andrew Raczkowski</a><br><a href="javascript:sendLogRequest('Colin Raczkowski', '7232 Golf Course Lane');">Colin Raczkowski</a><br><a href="javascript:sendLogRequest('Daughter Raczkowski', '7232 Golf Course Lane');">Daughter Raczkowski</a><br><a href="./guestPassForm.html?address=7232 Golf Course Lane" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>0&nbspKeyCode</td>
+    <td>7232&nbsp;Golf Course Lane</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('Paulina Thurmann', '252 Los Palmos');">Paulina Thurmann</a><img src="14.jpg" alt="Paulina Thurmann" width="200" height="200" /><br><a href="javascript:sendLogRequest('HO - Joanna Thurmann', '252 Los Palmos');">HO - Joanna Thurmann</a><img src="15.jpg" alt="HO - Joanna Thurmann" width="200" height="200" /><br><a href="./guestPassForm.html?address=252 Los Palmos" target="_blank">Guest</a><br></td>
-    <td style="color: green;">love this family!</td>
-    <td>252&nbspLos Palmos</td>
-  </tr>
-  <tr>
-    <td><a href="javascript:sendLogRequest('HO Tanvir Kekan', '226 Purple Glen');">HO Tanvir Kekan</a><img src="13.jpg" alt="HO Tanvir Kekan" width="200" height="200" /><br><a href="javascript:sendLogRequest('HO Preeti Tambade', '226 Purple Glen');">HO Preeti Tambade</a><br><a href="javascript:sendLogRequest('Rohan Tambade', '226 Purple Glen');">Rohan Tambade</a><br><a href="./guestPassForm.html?address=226 Purple Glen" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('Laurie Hansen', '0 Intero');">Laurie Hansen</a><br><a href="./guestPassForm.html?address=0 Intero" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>226&nbspPurple Glen</td>
+    <td>0&nbsp;Intero</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('HO Vic Haddad', '6517 San Anselmo');">HO Vic Haddad</a><img src="10.jpg" alt="HO Vic Haddad" width="200" height="200" /><br><a href="./guestPassForm.html?address=6517 San Anselmo" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('AM Tim Hodge', '1883 Orange Grove Drive');">AM Tim Hodge</a><br><a href="javascript:sendLogRequest('AM Kelly Hodge', '1883 Orange Grove Drive');">AM Kelly Hodge</a><br><a href="./guestPassForm.html?address=1883 Orange Grove Drive" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>6517&nbspSan Anselmo</td>
+    <td>1883&nbsp;Orange Grove Drive</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('HO - Christine Francis', '6129 San Buena');">HO - Christine Francis</a><br><a href="./guestPassForm.html?address=6129 San Buena" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('Luc Nguyen', '0 Pickleball');">Luc Nguyen</a><br><a href="./guestPassForm.html?address=0 Pickleball" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>6129&nbspSan Buena</td>
+    <td>0&nbsp;Pickleball</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('Beth Christemsen', '6323 Solano');">Beth Christemsen</a><br><a href="./guestPassForm.html?address=6323 Solano" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('David  Phipps', '0 SVS');">David  Phipps</a><br><a href="javascript:sendLogRequest('Jerry Bozzo', '0 SVS');">Jerry Bozzo</a><br><a href="./guestPassForm.html?address=0 SVS" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>6323&nbspSolano</td>
+    <td>0&nbsp;SVS</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('HO John OByrne', '0 Staff');">HO John OByrne</a><img src="1.jpg" alt="HO John OByrne" width="200" height="200" /><br><a href="javascript:sendLogRequest('Luke Brown', '0 Staff');">Luke Brown</a><img src="11.jpg" alt="Luke Brown" width="200" height="200" /><br><a href="./guestPassForm.html?address=0 Staff" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('Thomas Le', '0 Tennis');">Thomas Le</a><br><a href="./guestPassForm.html?address=0 Tennis" target="_blank">Guest</a><br></td>
     <td></td>
-    <td>0&nbspStaff</td>
+    <td>0&nbsp;Tennis</td>
   </tr>
 
   
