Add test output files

--- a/CreateMemberList/testData/TestCreateMemberList_small/output/members.html
+++ b/CreateMemberList/testData/TestCreateMemberList_small/output/members.html
@@ -42,7 +42,7 @@ tr:nth-child(even) {
     <td>0&nbsp;Aqua</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('RENTER Katie Jacopi', '6346 Camino Verde Drive');">RENTER Katie Jacopi</a><img src="IMG_6013.HEIC.jpg" alt="RENTER Katie Jacopi" width="200" height="200" /><br><a href="javascript:sendLogRequest('RENTER Troy Jackson', '6346 Camino Verde Drive');">RENTER Troy Jackson</a><br><a href="./guestPassForm.html?address=6346 Camino Verde Drive" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('RENTER Katie Jacopi', '6346 Camino Verde Drive');">RENTER Katie Jacopi</a><img src="scooby.jpg" alt="RENTER Katie Jacopi" width="200" height="200" /><br><a href="javascript:sendLogRequest('RENTER Troy Jackson', '6346 Camino Verde Drive');">RENTER Troy Jackson</a><br><a href="./guestPassForm.html?address=6346 Camino Verde Drive" target="_blank">Guest</a><br></td>
     <td style="color: red;">The best daughter, without a doubt</td>
     <td>6346&nbsp;Camino Verde Drive</td>
   </tr>
@@ -72,7 +72,7 @@ tr:nth-child(even) {
     <td>192&nbsp;Coffeeberry Drive</td>
   </tr>
   <tr>
-    <td><a href="javascript:sendLogRequest('AM Amy Raczkowski', '7232 Golf Course Lane');">AM Amy Raczkowski</a><img src="amy.jpg.jpg" alt="AM Amy Raczkowski" width="200" height="200" /><br><a href="javascript:sendLogRequest('AM Andrew Raczkowski', '7232 Golf Course Lane');">AM Andrew Raczkowski</a><br><a href="javascript:sendLogRequest('Colin Raczkowski', '7232 Golf Course Lane');">Colin Raczkowski</a><br><a href="javascript:sendLogRequest('Daughter Raczkowski', '7232 Golf Course Lane');">Daughter Raczkowski</a><br><a href="./guestPassForm.html?address=7232 Golf Course Lane" target="_blank">Guest</a><br></td>
+    <td><a href="javascript:sendLogRequest('AM Amy Raczkowski', '7232 Golf Course Lane');">AM Amy Raczkowski</a><img src="amy.jpg" alt="AM Amy Raczkowski" width="200" height="200" /><br><a href="javascript:sendLogRequest('AM Andrew Raczkowski', '7232 Golf Course Lane');">AM Andrew Raczkowski</a><br><a href="javascript:sendLogRequest('Colin Raczkowski', '7232 Golf Course Lane');">Colin Raczkowski</a><br><a href="javascript:sendLogRequest('Daughter Raczkowski', '7232 Golf Course Lane');">Daughter Raczkowski</a><br><a href="./guestPassForm.html?address=7232 Golf Course Lane" target="_blank">Guest</a><br></td>
     <td></td>
     <td>7232&nbsp;Golf Course Lane</td>
   </tr>
