Handle multiple years

--- a/GuestReport/input/yearHeader.html
+++ b/GuestReport/input/yearHeader.html
@@ -38,7 +38,7 @@ tr:nth-child(even) {
 <table style="width:100%">
   <thead>
     <tr>
-      <th scope="col">Month</th>
+      <th scope="col">%TIME_PERIOD%</th>
       <th scope="col">Total # People/Guests</th>
       <th scope="col"># HOA/Guests</th>
       <th scope="col"># AM/Guests</th>
