--- a/GuestReport/testData/output/TestYearsHTMLGenerator.html
+++ b/GuestReport/testData/output/TestYearsHTMLGenerator.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Usage for 2021</title>
+<title>Usage for All Years</title>
 <style>
 table {
   font-family: arial, sans-serif;
@@ -34,11 +34,11 @@ tr:nth-child(even) {
 </style>
 </head>
 <body>
-<h2>Usage for 2021</h2>
+<h2>Usage for All Years</h2>
 <table style="width:100%">
   <thead>
     <tr>
-      <th scope="col">Month</th>
+      <th scope="col">Year</th>
       <th scope="col">Total # People/Guests</th>
       <th scope="col"># HOA/Guests</th>
       <th scope="col"># AM/Guests</th>
@@ -46,9 +46,15 @@ tr:nth-child(even) {
   </thead>
  
   <tr>
-<td><a href="./dummy1.html">February</a></td><td>8 / 0</td><td>21 / 0</td><td>4 / 0</td>  </tr>
+<td><a href="./dummy1.html">2021</a></td><td>0 / 3</td><td>12 / 3</td><td>0 / 0</td>  </tr>
   <tr>
-<td><a href="./dummy2.html">March</a></td><td>4 / 36</td><td>40 / 36</td><td>2 / 0</td>  </tr>
+<td><a href="./dummy2.html">2022</a></td><td>6 / 0</td><td>7 / 0</td><td>3 / 0</td>  </tr>
+  <tr>
+<td><a href="./dummy3.html">2023</a></td><td>2 / 0</td><td>7 / 0</td><td>1 / 0</td>  </tr>
+  <tr>
+<td><a href="./dummy4.html">2024</a></td><td>4 / 14</td><td>16 / 14</td><td>2 / 0</td>  </tr>
+  <tr>
+<td><a href="./dummy5.html">2025</a></td><td>0 / 19</td><td>19 / 19</td><td>0 / 0</td>  </tr>
 
   
 </table>
