Load hoa member address list instead of assosiate member list.

--- a/GuestReport/testData/output/TestDayHTMLGenerator.html
+++ b/GuestReport/testData/output/TestDayHTMLGenerator.html
@@ -45,8 +45,8 @@ tr:nth-child(even) {
   </thead>
  
     <tr><td>6346 Camino Verde</td><td>14</td><td>12</td></tr>
-    <tr><td>435 Allegan Circle</td><td>4</td><td>4</td></tr>
-    <tr><td>341 Bodega - AM</td><td>2</td><td>0</td></tr>
+    <tr><td>435 Allegan Circle - AM</td><td>4</td><td>4</td></tr>
+    <tr><td>341 Bodega</td><td>2</td><td>0</td></tr>
   <tfoot>    <tr><td></td><td>20</td><td>16</td></tr>
   </tfoot>
   
